# token-counter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: count_tokens.py  export_report_pdf.py  hf_token_count_run.py
src/token_counter/: __init__.py  cli.py  hf_auth.py  hf_dataset_meta.py  pdf_export.py  reporting.py  terminal_ui.py
tests/: test_cli_reports.py  test_pdf_export.py
