[project]
name = "token-counter"
version = "0.1.0"
description = "CLI tool to count tokenizer tokens in JSONL or Parquet datasets and produce markdown reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "datasets>=2.17.0",
    "tqdm>=4.66.0",
    "transformers>=4.38.0",
    "sentencepiece>=0.1.99",
]

[project.scripts]
token-counter = "token_counter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
